--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "psr/http-server-handler": "^1.0",
         "psr/http-server-middleware": "^1.0",
         "laminas/laminas-diactoros": "^3.5",
-        "laminas/laminas-httphandlerrunner": "^2.11"
+        "laminas/laminas-httphandlerrunner": "^2.11",
+        "firebase/php-jwt": "^6.11"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
